feat: add objective and summury sections

--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
           </li>
         </ul>
       </header>
+
+      <section>
+        <h2>Objective</h2>
+        <p>Front-end Developer</p>
+      </section>
+
+      <section>
+        <h2>Summury</h2>
+        <p class="text_indent">
+          When new technologies are released in the field of web development, I
+          strive to study and understand them in full. Communication with the
+          team not only contributes to more productive work, but also simply
+          gives pleasure. The skill of concentrating on the tasks set does not
+          allow me to lose my working rhythm.
+        </p>
+      </section>
     </div>
   </body>
 </html>
