feat: add work experience section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
           allow me to lose my working rhythm.
         </p>
       </section>
+
+      <section>
+        <h2>Work experience</h2>
+        <p>
+          <b>04.2021 - 05.2021</b><br />
+          <b> IT-Academy</b><br />
+          Working on a
+          <a href="https://alexalehno.github.io/Aleksandr_Alehno/project/"
+            >graduation project</a
+          >
+          .<br />
+          The project is a single-page web application. HTML, CSS and JavaScript
+          technologies were used.
+        </p>
+        <p>
+          <b>02.2020 - 03.2020</b><br />
+          <b> IT-Academy</b><br />
+          Working on a
+          <a href="https://alexalehno.github.io/boostfolia/src/"
+            >graduation project</a
+          >.<br />
+          The project is a cross-browser responsive website. HTML, CSS, Gulp,
+          SASS, jQuery, JavaScript, Grid Layout, BEM technologies were used.
+        </p>
+      </section>
     </div>
   </body>
 </html>
