feat: add education and courses sections

--- a/index.html
+++ b/index.html
@@ -74,6 +74,42 @@
           SASS, jQuery, JavaScript, Grid Layout, BEM technologies were used.
         </p>
       </section>
+
+      <section>
+        <h2>Education</h2>
+        <p>
+          <b>09.2014 - 06.2018</b> <br />
+          <b>State Academy of Communications</b> , Minsk<br />
+          Infocommunication networks
+        </p>
+      </section>
+
+      <section>
+        <h2>Courses</h2>
+        <p>
+          <b>02.2021 - 05.2021</b> <br />
+          <b>IT-Academy</b>, Minsk <br />
+          Web application development with JavaScript<br />
+          Studied: function, array, object, OOP, event, timer, animation, JSON,
+          AJAX, SPA, GIT<br />
+          <a
+            href="https://alexalehno.github.io/Aleksandr_Alehno/certificate/certificate.html"
+            >Certificate of successful completion of the course</a
+          >
+        </p>
+
+        <p>
+          <b>11.2019 - 03.2020</b> <br />
+          <b>IT-Academy</b>, Minsk <br />
+          Website development using HTML, CSS, and JavaScript <br />
+          Studied: HTML5, CSS3, Sass, Flex, Greed, Animation, form, Adaptive Web
+          Design, media-queries<br />
+          <a
+            href="https://alexalehno.github.io/Aleksandr_Alehno/certificate_HTML_CSS_JS/certificate_HTML_CSS_JS.html"
+            >Certificate of successful completion of the course</a
+          >
+        </p>
+      </section>
     </div>
   </body>
 </html>
