--- a/index.html
+++ b/index.html
@@ -34,82 +34,105 @@
         </ul>
       </header>
 
-      <section>
-        <h2>Objective</h2>
-        <p>Front-end Developer</p>
-      </section>
+      <main>
+        <section>
+          <h2>Objective</h2>
+          <p>Front-end Developer</p>
+        </section>
 
-      <section>
-        <h2>Summury</h2>
-        <p class="text_indent">
-          When new technologies are released in the field of web development, I
-          strive to study and understand them in full. Communication with the
-          team not only contributes to more productive work, but also simply
-          gives pleasure. The skill of concentrating on the tasks set does not
-          allow me to lose my working rhythm.
-        </p>
-      </section>
+        <section>
+          <h2>Summury</h2>
+          <p class="text_indent">
+            When new technologies are released in the field of web development,
+            I strive to study and understand them in full. Communication with
+            the team not only contributes to more productive work, but also
+            simply gives pleasure. The skill of concentrating on the tasks set
+            does not allow me to lose my working rhythm.
+          </p>
+        </section>
 
-      <section>
-        <h2>Work experience</h2>
-        <p>
-          <b>04.2021 - 05.2021</b><br />
-          <b> IT-Academy</b><br />
-          Working on a
-          <a href="https://alexalehno.github.io/Aleksandr_Alehno/project/"
-            >graduation project</a
-          >
-          .<br />
-          The project is a single-page web application. HTML, CSS and JavaScript
-          technologies were used.
-        </p>
-        <p>
-          <b>02.2020 - 03.2020</b><br />
-          <b> IT-Academy</b><br />
-          Working on a
-          <a href="https://alexalehno.github.io/boostfolia/src/"
-            >graduation project</a
-          >.<br />
-          The project is a cross-browser responsive website. HTML, CSS, Gulp,
-          SASS, jQuery, JavaScript, Grid Layout, BEM technologies were used.
-        </p>
-      </section>
+        <section>
+          <h2>Work experience</h2>
+          <p>
+            <b>04.2021 - 05.2021</b><br />
+            <b> IT-Academy</b><br />
+            Working on a
+            <a href="https://alexalehno.github.io/Aleksandr_Alehno/project/"
+              >graduation project</a
+            >
+            .<br />
+            The project is a single-page web application. HTML, CSS and
+            JavaScript technologies were used.
+          </p>
+          <p>
+            <b>02.2020 - 03.2020</b><br />
+            <b> IT-Academy</b><br />
+            Working on a
+            <a href="https://alexalehno.github.io/boostfolia/src/"
+              >graduation project</a
+            >.<br />
+            The project is a cross-browser responsive website. HTML, CSS, Gulp,
+            SASS, jQuery, JavaScript, Grid Layout, BEM technologies were used.
+          </p>
+        </section>
 
-      <section>
-        <h2>Education</h2>
-        <p>
-          <b>09.2014 - 06.2018</b> <br />
-          <b>State Academy of Communications</b> , Minsk<br />
-          Infocommunication networks
-        </p>
-      </section>
+        <section>
+          <h2>Education</h2>
+          <p>
+            <b>09.2014 - 06.2018</b> <br />
+            <b>State Academy of Communications</b> , Minsk<br />
+            Infocommunication networks
+          </p>
+        </section>
 
-      <section>
-        <h2>Courses</h2>
-        <p>
-          <b>02.2021 - 05.2021</b> <br />
-          <b>IT-Academy</b>, Minsk <br />
-          Web application development with JavaScript<br />
-          Studied: function, array, object, OOP, event, timer, animation, JSON,
-          AJAX, SPA, GIT<br />
-          <a
-            href="https://alexalehno.github.io/Aleksandr_Alehno/certificate/certificate.html"
-            >Certificate of successful completion of the course</a
-          >
-        </p>
+        <section>
+          <h2>Courses</h2>
+          <p>
+            <b>02.2021 - 05.2021</b> <br />
+            <b>IT-Academy</b>, Minsk <br />
+            Web application development with JavaScript<br />
+            Studied: function, array, object, OOP, event, timer, animation,
+            JSON, AJAX, SPA, GIT<br />
+            <a
+              href="https://alexalehno.github.io/Aleksandr_Alehno/certificate/certificate.html"
+              >Certificate of successful completion of the course</a
+            >
+          </p>
 
-        <p>
-          <b>11.2019 - 03.2020</b> <br />
-          <b>IT-Academy</b>, Minsk <br />
-          Website development using HTML, CSS, and JavaScript <br />
-          Studied: HTML5, CSS3, Sass, Flex, Greed, Animation, form, Adaptive Web
-          Design, media-queries<br />
-          <a
-            href="https://alexalehno.github.io/Aleksandr_Alehno/certificate_HTML_CSS_JS/certificate_HTML_CSS_JS.html"
-            >Certificate of successful completion of the course</a
-          >
-        </p>
-      </section>
+          <p>
+            <b>11.2019 - 03.2020</b> <br />
+            <b>IT-Academy</b>, Minsk <br />
+            Website development using HTML, CSS, and JavaScript <br />
+            Studied: HTML5, CSS3, Sass, Flex, Greed, Animation, form, Adaptive
+            Web Design, media-queries<br />
+            <a
+              href="https://alexalehno.github.io/Aleksandr_Alehno/certificate_HTML_CSS_JS/certificate_HTML_CSS_JS.html"
+              >Certificate of successful completion of the course</a
+            >
+          </p>
+        </section>
+
+        <section>
+          <h2>Additional Information</h2>
+          <p class="text_indent">
+            I am fond of music, reading professional literature (“You don't know
+            JS”, “Expressive JavaScript”, ”Grokking Algorithms” ), watching
+            movies and TV shows. I get acquainted with the technical
+            documentation on the official websites (
+            <a href="https://developer.mozilla.org/en-US/"
+              >developer.mozilla.org</a
+            >
+            , <a href="https://www.w3schools.com/">www.w3schools.com</a> ,
+            <a href="https://html.spec.whatwg.org/">html.spec.whatwg.org</a> ,
+            <a href="https://262.ecma-international.org/"
+              >262.ecma-international.org</a
+            >
+            ). In between studying new technologies, I try to set aside time for
+            independent learning to play the electric guitar, and also attend
+            various concerts, festivals and theater performances.
+          </p>
+        </section>
+      </main>
     </div>
   </body>
 </html>
