--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./sytle.css" />
+    <link rel="stylesheet" href="./css/sytle.css" />
     <title>CV-ALEKSANDR</title>
   </head>
   <body>
