--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href='./css/highlight/atom-one-dark-reasonable.min.css'/>
+  <link rel="stylesheet" href='./css/highlight/atom-one-dark-reasonable.min.css' />
   <link rel="stylesheet" href="./css/sytle.css" />
   <title>CV-ALEKSANDR</title>
 </head>
@@ -18,6 +18,7 @@
   <header>
     <div class="container pos-nav bg-nav">
       <nav>
+        <h3 class="nav-header">Navigation</h3>
         <ul class="nav-items ">
           <li class="nav-item"><a href="#objective">Objective</a></li>
           <li class="nav-item"><a href="#summury">Summury</a></li>
@@ -46,11 +47,21 @@
 
         <div class="contacts-wrap">
           <ul class="contacts-items">
-            <li class="contacts-item"><b>Phone:</b> +375 33 658 33 99</li>
-            <li class="contacts-item"><b>Email:</b> aleksandr888alehno@gmail.com</li>
-            <li class="contacts-item"><b>Skype:</b> Aleksandr Alehno</li>
-            <li class="contacts-item"><b>Linkedin:</b> <a href="https://www.linkedin.com/in/aleksandr-alehno-889bb0213/">Aleksandr Alehno</a></li>
-            <li class="contacts-item"><b>GitHub:</b> <a href="https://github.com/alexalehno">alexalehno</a></li>
+            <li class="contacts-item">
+              <h4>Phone:</h4> +375 33 658 33 99
+            </li>
+            <li class="contacts-item">
+              <h4>Email:</h4> aleksandr888alehno@gmail.com
+            </li>
+            <li class="contacts-item">
+              <h4>Skype:</h4> Aleksandr Alehno
+            </li>
+            <li class="contacts-item">
+              <h4>Linkedin:</h4> <a href="https://www.linkedin.com/in/aleksandr-alehno-889bb0213/">Aleksandr Alehno</a>
+            </li>
+            <li class="contacts-item">
+              <h4>GitHub:</h4> <a href="https://github.com/alexalehno">alexalehno</a>
+            </li>
           </ul>
           <div class="photo"></div>
         </div>
@@ -214,7 +225,9 @@
 
   <script src="./js/script.js"></script>
   <script src="./js/highlight.min.js"></script>
-  <script>hljs.highlightAll();</script>
+  <script>
+    hljs.highlightAll();
+  </script>
 </body>
 
 </html>
