refactor: change code section style

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h2>Сode example</h2>
         <p>Sum all the values that don't appear below "0".</p>
         <pre class="code-example ">
-  <code class="prettyprint">
+  <code class="prettyprint code-item">
     function getMatrixElementsSum(matrix) {
       let sum = 0;
       for (let i = 0; i &lt; matrix.length; i++) {
