refactor: change projects section, add js-clock

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             </div>
           </div>
 
+          <div class="project-item project-five">
+            <a class="project-item-ref" target="project-5" href="https://alexalehno.github.io/js-clock/"></a>  
+
+            <div class="project-description">
+              <span class="project-description-name">Js-Clock</span>
+              <span class="project-description-tech">HTML, CSS, JavaScript</span>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
