feat: add video-player project

--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
             </div>
           </div>
 
+          <div class="project-item project-six">
+            <a class="project-item-ref" target="project-6" href="https://alexalehno.github.io/custom-video-player/"></a>  
+
+            <div class="project-description">
+              <span class="project-description-name">Video-Player</span>
+              <span class="project-description-tech">HTML, CSS, JavaScript</span>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
