feat: add some-porojects

--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@
             </div>
           </div>
 
+          <div class="project-item project-seven">
+            <a class="project-item-ref" target="project-7" href="https://alexalehno.github.io/some-tasks/"></a>
+
+            <div class="project-description">
+              <span class="project-description-name">Some-Projects</span>
+              <span class="project-description-tech">OOP, MVC, SPA, AJAX, JavaScript, HTML, CSS</span>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
@@ -182,7 +191,8 @@
           <p class="work-project-ref"><span class="work-content">Working on a </span><a class="graduation-project-ref"
               href="https://alexalehno.github.io/Aleksandr_Alehno/project/" target="project-1"><span
                 class="work-content">graduation project.</span></a></p>
-          <p class="work-project-tech work-content">The project is a single-page web application. HTML, CSS and JavaScript
+          <p class="work-project-tech work-content">The project is a single-page web application. HTML, CSS and
+            JavaScript
             technologies were used.</p>
         </div>
 
@@ -190,7 +200,8 @@
           <span class="work-date">02.2020 - 03.2020</span>
           <span class="work-name">IT-Academy</span>
           <p class="work-project-ref"><span class="work-content">Working on a </span><a class="graduation-project-ref"
-              href="https://alexalehno.github.io/boostfolia/src/" target="project-2"><span class="work-content">graduation
+              href="https://alexalehno.github.io/boostfolia/src/" target="project-2"><span
+                class="work-content">graduation
                 project.</span></a></p>
           <p class="work-project-tech work-content">The project is a cross-browser responsive website. HTML, CSS, Gulp,
             SASS, jQuery, JavaScript, Grid Layout, BEM technologies were used.</p>
@@ -270,7 +281,8 @@
           <span class="course-institute">IT-Academy,</span>
           <span class="course-city course-content">Minsk</span>
           <span class="course-name course-content">Website development using HTML, CSS, and JavaScript</span>
-          <span class="course-tech course-content">Studied: HTML5, CSS3, Sass, Flex, Greed, Animation, form, Adaptive Web
+          <span class="course-tech course-content">Studied: HTML5, CSS3, Sass, Flex, Greed, Animation, form, Adaptive
+            Web
             Design, media-queries</span>
           <a class="certificate-ref course-content"
             href="https://alexalehno.github.io/Aleksandr_Alehno/certificate_HTML_CSS_JS/certificate_HTML_CSS_JS.html"
