feat: add project art-quiz

--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
         <p class="trans-item">There are some projects here:</p>
         <div class="project-wrap">
 
+          <div class="project-item project-eight">
+            <a class="project-item-ref" target="project-8" href="https://roaring-torrone-b87b2c.netlify.app/"></a>
+
+            <div class="project-description">
+              <span class="project-description-name">Art-Quiz App</span>
+              <span class="project-description-tech">Webpack, JS modules, OOP, MVC, SPA, AJAX, JavaScript, SCSS, Mobile
+                First, HTML</span>
+            </div>
+          </div>
+
           <div class="project-item project-one">
             <a class="project-item-ref" target="project-1"
               href="https://rolling-scopes-school.github.io/alexalehno-JSFE2021Q3/momentum/"></a>
