refactor: change description art-quiz project

--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
 
             <div class="project-description">
               <span class="project-description-name">Art-Quiz App</span>
-              <span class="project-description-tech">Webpack, JS modules, OOP, MVC, SPA, AJAX, JavaScript, SCSS, Mobile
-                First, HTML</span>
+              <span class="project-description-tech">Webpack, JS modules, Eslint airbnb-base, OOP, MVC, SPA, AJAX,
+                JavaScript, SCSS, Mobile
+                First, БЭМ, HTML</span>
             </div>
           </div>
 
