refactor: change styel and content

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
         <span class="work-item__date">04.2021 - 05.2021</span>
         <span class="work-item__name">IT-Academy</span>
 
-        <p class="work-item__project"><span class="work-content">Working on a </span>
+        <p class="work-item__project"><span class="work-content">Development of </span>
           <a class="work-item__link" href="https://alexalehno.github.io/Aleksandr_Alehno/project/" target="project-1">
-            <span class="work-content">graduation project.</span>
+            <span class="work-content">the graduation project.</span>
           </a>
         </p>
 
@@ -197,9 +197,9 @@
         <span class="work-item__date">02.2020 - 03.2020</span>
         <span class="work-item__name">IT-Academy</span>
 
-        <p class="work-item__project"><span class="work-content">Working on a </span>
+        <p class="work-item__project"><span class="work-content">Development of </span>
           <a class="work-item__link" href="https://alexalehno.github.io/boostfolia/src/" target="project-2">
-            <span class="work-content">graduation project.</span>
+            <span class="work-content">the graduation project.</span>
           </a>
         </p>
 
@@ -291,17 +291,15 @@
     <section id="additionally">
       <h2 class="section-title">Additionally</h2>
       <p class="text_indent">
-        <span class="additionally-content">I am fond of music, reading professional literature (“You don't know
-          JS”, “Expressive JavaScript”, ”Grokking Algorithms” ), watching
-          movies and TV shows. I get acquainted with the technical
-          documentation on the official websites</span> (
+        <span class="additionally-content">I am fond of reading books (“You don't know
+          JS”, “Expressive JavaScript”, ”Grokking Algorithms”), watching
+          movies and TV shows. I study technical documentation on official websites</span> (
         <a href="https://developer.mozilla.org/en-US/" target="mdn">developer.mozilla.org</a>
         , <a href="https://www.w3schools.com/" target="w3">www.w3schools.com</a> ,
         <a href="https://html.spec.whatwg.org/" target="whatwg">html.spec.whatwg.org</a> ,
         <a href="https://262.ecma-international.org/" target="ecma">262.ecma-international.org</a>
-        ). <span class="additionally-content"> In between studying new technologies, I try to set aside time for
-          independent learning to play the electric guitar, and also attend
-          various concerts, festivals and theater performances.</span>
+        ). <span class="additionally-content"> In my free time, I learn to play the electric guitar, and also attend
+          various concerts and festivals..</span>
       </p>
     </section>
   </main>
