feat: add tic-tac-toe-game project

--- a/index.html
+++ b/index.html
@@ -171,6 +171,15 @@
           </div>
         </div>
 
+        <div class="projects-item projects-item--nine">
+          <a class="projects-item__link" target="project-9" href="https://alexalehno.github.io/tic-tac-toe-game/"></a>
+
+          <div class="projects-item__description">
+            <span class="projects-item__name">Tic-Tac-Toe Game</span>
+            <span class="projects-item__tech"></span>
+          </div>
+        </div>
+
       </div>
     </section>
 
