refactor: content refactoring

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <h2 class="section-title">Education</h2>
       <p>
         <span class="education__date">09.2014 - 06.2018</span>
-        <span class="education__university">State Academy of Communications</span>, <span
+        <span class="education__university">Belarusian State Academy of Communications</span>, <span
           class="education__city">Minsk</span>
         <span class="education__direction">Infocommunication networks</span>
       </p>
@@ -285,7 +285,7 @@
         <span class="course-date">11.2019 - 03.2020</span>
         <span class="course-institute">IT-Academy,</span>
         <span class="course-city course-content">Minsk</span>
-        <span class="course-name course-content">Website development using HTML, CSS, and JavaScript</span>
+        <span class="course-name course-content">Website development with HTML, CSS, and JavaScript</span>
         <span class="course-tech course-content">Studied: HTML5, CSS3, Sass, Flex, Greed, Animation, form, Adaptive
           Web
           Design, media-queries</span>
@@ -308,7 +308,7 @@
         <a href="https://html.spec.whatwg.org/" target="whatwg">html.spec.whatwg.org</a> ,
         <a href="https://262.ecma-international.org/" target="ecma">262.ecma-international.org</a>
         ). <span class="additionally-content"> In my free time, I learn to play the electric guitar, and also attend
-          various concerts and festivals..</span>
+          various concerts and events</span>
       </p>
     </section>
   </main>
