refactor: change experience content

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
       <h2 class="section-title">Experience</h2>
 
       <div class="work-item">
-        <span class="work-item__date">04.2021 - 05.2021</span>
-        <span class="work-item__name">IT-Academy</span>
+        <span class="work-item__date">02.2021 - 05.2021</span>
+        <span class="work-item__name work-content">Training at the IT Academy</span>
 
         <p class="work-item__project"><span class="work-content">Development of </span>
           <a class="work-item__link" href="https://alexalehno.github.io/Aleksandr_Alehno/project/" target="project-1">
@@ -202,8 +202,8 @@
       </div>
 
       <div class="work-item">
-        <span class="work-item__date">02.2020 - 03.2020</span>
-        <span class="work-item__name">IT-Academy</span>
+        <span class="work-item__date">11.2019 - 03.2020</span>
+        <span class="work-item__name work-content">Training at the IT Academy</span>
 
         <p class="work-item__project"><span class="work-content">Development of </span>
           <a class="work-item__link" href="https://alexalehno.github.io/boostfolia/src/" target="project-2">
