refactor: changed link momentum task

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <div class="projects-item projects-item--one">
           <a class="projects-item__link" target="project-1"
-            href="https://rolling-scopes-school.github.io/alexalehno-JSFE2021Q3/momentum/"></a>
+            href="https://alexalehno.github.io/momentum/"></a>
 
           <div class="projects-item__description">
             <span class="projects-item__name">Momentum App</span>
