feat: add word-finder project

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
         </div>
 
         <div class="projects-item projects-item--one">
-          <a class="projects-item__link" target="project-1"
-            href="https://alexalehno.github.io/momentum/"></a>
+          <a class="projects-item__link" target="project-1" href="https://alexalehno.github.io/momentum/"></a>
 
           <div class="projects-item__description">
             <span class="projects-item__name">Momentum App</span>
@@ -175,6 +174,15 @@
 
           <div class="projects-item__description">
             <span class="projects-item__name">Tic-Tac-Toe Game</span>
+            <span class="projects-item__tech"></span>
+          </div>
+        </div>
+
+        <div class="projects-item projects-item--ten">
+          <a class="projects-item__link" target="project-10" href="https://alexalehno.github.io/Word-Finder/"></a>
+
+          <div class="projects-item__description">
+            <span class="projects-item__name">Word-Finder App</span>
             <span class="projects-item__tech"></span>
           </div>
         </div>
