--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <section class="skills" id="skills">
       <h2 class="section-title">Skills</h2>
       <ul class="skills__list">
+        <li class="skills__item"> React, Redux</li>
         <li class="skills__item">JavaScript, ES6</li>
         <li class="skills__item">HTML, HTML5,</li>
         <li class="skills__item">CSS, CSS3,</li>
@@ -92,6 +93,15 @@
       <p class="trans-item">There are some projects here:</p>
 
       <div class="projects-list">
+        <div class="projects-item projects-item--eleven">
+          <a class="projects-item__link" target="project-11" href="https://art-quiz-react.vercel.app/"></a>
+
+          <div class="projects-item__description">
+            <span class="projects-item__name">Art-Quiz-React App</span>
+            <span class="projects-item__tech">React, Redux</span>
+          </div>
+        </div>
+
         <div class="projects-item projects-item--eight">
           <a class="projects-item__link" target="project-8" href="https://roaring-torrone-b87b2c.netlify.app/"></a>
 
